Possible compatibility problems with earlier versions marked with '*'.

--- 2.0.3 2003/06/20

Fix CCL directive @case handling so that it affects string match for
both CCL keywords and qualifiers.

* ESFormat-Update updates. Packages with OID 1.2.840.10003.9.5.1 and
1.2.840.10003.9.5 are now handled by the same decoder z_IU0Update .
Decoder has been updated with ASN.1 changes as listed in
http://lcweb.loc.gov/z3950/agency/defns/updateES.html
Note that the "latest" DB Update, OID 1.2.840.10003.9.5.1.1 , handler
z_IUUpdate, remains unchanged. 

ZOOM_record_get may now return a record in a specific character set.
For type use "form; charset=from[,to]" where form (render, xml, ..) ,
"from" is the character set of record as returned by target. "to" is
the character set to be returned. If omitted, "to" is UTF-8.

YAZ ASN.1 compiler renamed from yaz-comp to yaz-asncomp

New ODR utility, odr_getelement, which returns name of element for
which encoding/decoding failed.

Fixed ODR so that it returns error code OREQUIRED rather than ONONE
in cases where a required element was omitted.

Bug fix: some MARC8 sequences were not converted.

New ZOOM option "step" which specifies number of records to be
retrieved in one chunk. Used in conjunction with "start" and "count".

SRW support for yaz-client. Use scheme http: to use it, e.g.
 http://host:port/db

yaz-client no longer does (un)intelligent character set conversions
by default. Can be enabled with charset and marc_charset commands.

xmalloc trace fix for 64-bit systems such as DEC alpha. 

Solaris 2.6 compile fix.

New function, cql_strerror() translates SRW error codes, as returned
by cql_transform_error(), into human-readable English strings.  Used
in yaz-client diagnostics when appropriate.

New CQL2RPN query-type for the command-line yaz-client, parses CQL and
converts it into a type-1 query which is sent to the server.  This
makes CQL available for use with all Z-servers, as opposed to the tiny