@@ -1,4 +1,4 @@
-# $Id: bib1,v 1.12 2002-10-14 19:45:36 adam Exp $
+# $Id: bib1,v 1.13 2003-06-23 10:22:21 adam Exp $
 # CCL qualifiers and their mappings
 #
 # Each line takes the form:
@@ -114,3 +114,6 @@ exp:category exp1,1=1
 forfatter au
 # tiau=x is equivalent to ti=x or ti=x
 tiau ti au
+#
+# string atributes
+dc.title 1=/my/title
